@@ -5,14 +5,11 @@
 -XX:+UseCompressedOops
 -XX:NewRatio=2
 -Dfile.encoding=UTF-8
--XX:+UseConcMarkSweepGC
 -XX:SoftRefLRUPolicyMSPerMB=250
 -XX:NewSize=512m
 -XX:MaxNewSize=512m
 -XX:PermSize=512m
 -XX:MaxPermSize=1024m
--XX:+UseParNewGC
--XX:ParallelGCThreads=4
 -XX:MaxTenuringThreshold=1
 -XX:SurvivorRatio=8
 -XX:+UseCodeCacheFlushing
@@ -30,13 +27,9 @@
 -XX:+DoEscapeAnalysis
 -XX:+UnlockExperimentalVMOptions
 -XX:LargePageSizeInBytes=256m
--XX:+DisableExplicitGC
--XX:+ExplicitGCInvokesConcurrent
--XX:+PrintGCDetails
 -XX:+PrintFlagsFinal
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+CMSPermGenSweepingEnabled
--XX:+UseAdaptiveGCBoundary
 -XX:+UseSplitVerifier
 -XX:CompileThreshold=10000
 -XX:+UseCompressedStrings
